<resources>

    <string name="search">Search</string>
    <string name="search_hint">Cari User</string>
    <string name="content_photo">Foto User</string>
    <string name="content_icon_company">Ikon Company</string>
    <string name="content_icon_location">Ikon Location</string>
    <string name="content_icon_person">Ikon Person</string>
    <string name="tab_title_1">Followers</string>
    <string name="tab_title_2">Following</string>
    <string name="action_bar_setting">Setting</string>
    <string name="action_bar_starred">Starred User</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="cari_user">Tekan Cari User Untuk Mencari User</string>


    <!-- Other string resources-->
    <string name="app_name">Github Users Plus</string>
    <string name="detail_user">Detail User</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="sample_name">Sample Name</string>
    <string name="sample_username">Sample Username</string>
    <string name="sample_company">Sample Company</string>
    <string name="sample_location">Sample Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>


